package switch2020.project.domain.sandbox;

public interface Category {
}
