package switchtwentytwenty.project.domain.family;

import switchtwentytwenty.project.AggregateRoot;
import switchtwentytwenty.project.domain.shared.FamilyID;
import switchtwentytwenty.project.domain.shared.FamilyName;

import java.time.LocalDate;

public class Family implements AggregateRoot {

    //private final FamilyID id;
    //private final FamilyName name;
    //private final LocalDate registrationDate; //Verificar classe a ser usada para representar a data
    //private Email adminEmail;

}
