package switch2020.project.model;


import java.util.ArrayList;

public class Application {

    private ArrayList<Family> families = new ArrayList() <>;
    private ArrayList<Category> categories = new ArrayList() <>;

    public Application() {

    }

}
